:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Enhancements::

* add `callout-list-marker-font-color` theme key to control color of conum marker in callout list (#2402)

== 2.3.4 (2022-10-29) - @mojavelinux

Bug Fixes::

* resolve attribute references in target of image in running content (#2361)
* replace use of AbstractNode#role= method to ensure compatiblity with minimum supported version of Asciidoctor (Asciidoctor 2.0.10) (#2363)

=== Details

{url-repo}/releases/tag/v2.3.4[git tag] | {url-repo}/compare/v2.3.3\...v2.3.4[full diff]

== 2.3.3 (2022-10-21) - @mojavelinux

Bug Fixes::

* fix crash if last fragment in TOC entry is not rendered (#2354)
* pass `-dNEWPDF=false` to Ghostscript when optimizing PDF so it does not break internal links (#2355)

=== Details

{url-repo}/releases/tag/v2.3.3[git tag] | {url-repo}/compare/v2.3.2\...v2.3.3[full diff]

== 2.3.2 (2022-09-17) - @mojavelinux

Improvements::

* provide fallback value for `base-font-size` theme key before processing keys (#2343)

=== Details

{url-repo}/releases/tag/v2.3.2[git tag] | {url-repo}/compare/v2.3.1\...v2.3.2[full diff]

== 2.3.1 (2022-09-17) - @mojavelinux

Improvements::

* provide a fallback value for `base-font-size` when loading theme (#2343)

Bug Fixes::

* fix crash when smallcaps text transform is applied to a phrase (#2339)
* don't add chapter signifier if `chapter-signifier` is unset (#2328)
* don't add part signifier if `part-signifier` is unset (#2328)
* don't include bottom margin when computing heading height if `heading-min-height-after` theme key is empty (#2326)
* draw border on heading (section title or discrete heading) if it is advanced to next page (#2322)
* arrange heading even if section is empty